# quick-alt-2

./: .gitignore  Cargo.toml
quick-alt-macros/: Cargo.toml
quick-alt-macros/src/: lib.rs
src/: lib.rs  main.rs
src/commands/: ping.rs
src/events/: interaction_create.rs  message_create.rs  mod.rs  ready.rs
